<?xml version="1.0"?>
<package format="3">
  <name>led_pwm_controller</name>
  <version>0.0.1</version>
  <description>LED PWM controller for Raspberry Pi using pigpio</description>

  <maintainer email="you@example.com">YourName</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>